0.4.2	UNRELEASED

 BUG FIXES

  * Support custom fields in commits.

 FEATURES

  * --without-speedups option to setup.py to allow building/installing 
    without the C extensions. (Hal Wine, Jelmer Vernooij)

0.4.1	2010-01-03

 FEATURES

  * Add ObjectStore.iter_tree_contents()

  * Add Index.changes_from_tree()

  * Add ObjectStore.tree_changes()

  * Add functionality for writing patches in dulwich.patch.

0.4.0	2009-10-07

 DOCUMENTATION

  * Added tutorial.

 API CHANGES

  * dulwich.object_store.tree_lookup_path will now return the mode and 
    sha of the object found rather than the object itself.

 BUG FIXES

  * Use binascii.hexlify / binascii.unhexlify for better performance.

  * Cope with extra unknown data in index files by ignoring it (for now).

  * Add proper error message when server unexpectedly hangs up. (#415843)

  * Correctly write opcode for equal in create_delta.

0.3.3	2009-07-23

 FEATURES

  * Implement ShaFile.__hash__().

  * Implement Tree.__len__()

 BUG FIXES
  
  * Check for 'objects' and 'refs' directories
    when looking for a Git repository. (#380818)

0.3.2	2009-05-20

 BUG FIXES

  * Support the encoding field in Commits.
  
  * Some Windows compatibility fixes.

  * Fixed several issues in commit support.

 FEATURES

  * Basic support for handling submodules.

0.3.1	2009-05-13

 FEATURES

  * Implemented Repo.__getitem__, Repo.__setitem__ and Repo.__delitem__ to 
    access content.

 API CHANGES

  * Removed Repo.set_ref, Repo.remove_ref, Repo.tags, Repo.get_refs and 
    Repo.heads in favor of Repo.refs, a dictionary-like object for accessing
	refs.

 BUG FIXES

  * Removed import of 'sha' module in objects.py, which was causing 
    deprecation warnings on Python 2.6.

0.3.0	2009-05-10

 FEATURES

  * A new function `commit_tree' has been added that can commit a tree 
    based on an index.

 BUG FIXES

  * The memory usage when generating indexes has been significantly reduced.
 